cabal-version:   3.0
name:            deltaq-live

-- Package Versioning Policy: https://pvp.haskell.org
-- PVP summary:  +-+------- breaking API changes
--               | | +----- non-breaking API additions
--               | | | +--- code changes with no API change
version:         0.1.0.0
synopsis:        Web page for ∆Q System Development

category:        DeltaQ, Distributed Systems, Probability
license:         BSD-3-Clause
license-file:    LICENSE
copyright:       PLWORKZ R&D, 2025
author:          Heinrich Apfelmus
maintainer:      apfelmus at quantentunnel dot de
extra-doc-files:
  README.md

executable deltaq-live
  -- Compiler options that are necessary for the WASM backend.
  ghc-options:
    -no-hs-main
    -optl-mexec-model=reactor
    "-optl-Wl,--export=setup"

  default-language: Haskell2010
  hs-source-dirs:   src
  main-is:          Main.hs

  build-depends:
    , ghc-experimental ^>=0.1 || (>=9.1000 && <9.1300)
    , base         >=4       && <5
    , deltaq       >=1.1.0.0 && <1.2
    , diagrams-lib >=1.3     && <1.6
    , diagrams-svg >=1.4     && <1.6
    , svg-builder  >=0.1     && <0.2
    , text         >=0.11    && <2.2

  other-modules:
    Render
